--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
       <a href="https://facebook.com" target="_blank">Facebook new window</a>
       <!--WebsiteLink New Window-->
       <a href="mailto:vishaltheking95@gmail.com">Email Me</a>
+      <a href="/WDD130/index2.html">WDD130</a>
       <!--Email-->
     </nav>
     <p class="tomaketextbold"><b>VIN'S</b> as a Rider.</p>
     <main>
-    <img src="Images/VIN.jpg" alt="MY Motor Cycle" />
-    <!--TEXT ELIMENT-->
-  </main>
+      <img src="Images/VIN.jpg" alt="MY Motor Cycle" />
+      <!--TEXT ELIMENT-->
+    </main>
 
     <p>My <em>Highschool</em> days.</p>
 
