--- a/Folder2/Secondpage.html
+++ b/Folder2/Secondpage.html
@@ -10,11 +10,11 @@
     <nav>
       <a href="Folder2/Secondpage.html">Second Page</a>
       <!--Added Link for second page-->
-      <a href="Images/Church.jpg">Images</a>
+      <a href="../Images/Church.jpg">Images</a>
       <!--LINK FOR IMAGES-->
-      <a href="Images/Mystry of food.jpg" download>Image 2 Download</a>
+      <a href="../Images/Mystry of food.jpg" download>Image 2 Download</a>
       <!--For Downloaing the Image-->
-      <a href="#section">Test part two</a>
+      <a href="../index.html">Test part two</a>
       <!--Jump to diffrent part of the page-->
       <a href="https://youtube.com">YouTube</a>
       <!--WebsiteLink-->
