--- a/WDD130/index2.html
+++ b/WDD130/index2.html
@@ -15,6 +15,7 @@
       <a href="positioning.html">Positioning Activity</a>
       <a href="#">Personal Website</a>
       <a href="#">Personal Siteplan</a>
+      <a href="../index.html">Tutoring</a>
     </nav>
     <p>VIN - WDD130</p>
   </body>
