--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="/WDD130/index2.html">WDD130</a>
       <!--Email-->
     </nav>
-    <p class="tomaketextbold"><b>VIN'S</b> as a Rider.</p>
+    <h1 class="tomaketextbold"><b>VIN'S</b> as a Rider.</h1>
     <main>
       <img src="Images/VIN.jpg" alt="MY Motor Cycle" />
       <!--TEXT ELIMENT-->
@@ -92,5 +92,8 @@
       ullam, nobis dolore, tenetur nesciunt? Cum placeat est, reiciendis facere
       recusandae nulla repudiandae quibusdam dolore libero illum.
     </p>
+    <footer>
+      <p>My First Web Page 20XX &copy</p>
+    </footer>
   </body>
 </html>
