Saved new changes

--- a/WDD130/wwr/site-plan-rafting.html
+++ b/WDD130/wwr/site-plan-rafting.html
@@ -63,7 +63,7 @@
       <a
         href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
         target="_blank"
-        >https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a
+        >https://coolors.co/f03a47-af5b5b-f1a208-8338ec-f6f4f3</a
       >
 
       <table class="colors">
@@ -75,9 +75,9 @@
         </tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr>
-          <td class="primary">[#396E94]</td>
-          <td class="secondary">[#E7C24F]</td>
-          <td class="accent1">[#A43312]</td>
+          <td class="primary">[#f03a47]</td>
+          <td class="secondary">[#F1A208]</td>
+          <td class="accent1">[#8338EC]</td>
           <td class="accent2"></td>
         </tr>
       </table>
