--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>My <em>Highschool</em> days.</p>
 
     <h2>TEST PART ONE</h2>
-    <p>HEllo</p>
+    <p>ABAMAJNKANK:LBAL:KBALKBAK:LB:BK</p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur,
       libero in nobis corporis quam odio adipisci. Tempore ullam aliquid labore,
