--- a/WDD130/wwr/site-plan-rafting.html
+++ b/WDD130/wwr/site-plan-rafting.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <h1>[Kingston river rafting] Site Plan</h1>
+      <h1>Kingston river rafting Site Plan</h1>
       <h2>VIN Kingston</h2>
       <h2>WDD 130-[Sister Anderson]</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -60,8 +60,7 @@
 
       <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
       <p>Palette URL:</p>
-      <a
-        href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+      <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
         target="_blank"
         >https://coolors.co/f03a47-af5b5b-f1a208-8338ec-f6f4f3</a
       >
