--- a/WDD130/wwr/site-plan-rafting.html
+++ b/WDD130/wwr/site-plan-rafting.html
@@ -29,11 +29,11 @@
         at Kingston River Rafting place. I am also considering cutomer's
         convenience in terms of booking online, check fears and cancellation.
         The main goal is to make a beautiful website which attracts customers of
-        all age and genders. Hello
+        all age and genders.
       </p>
       <!-- change this -->
 
-      <h3>My Audience is Tourist</h3>
+      <h3>My Audience is Tourist</h3>`
       <p>
         My customer is the 4.0 Million tourists who visit Yellowstone national
         park every year. The tourists visit from all over the country for
@@ -74,12 +74,15 @@
         </tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr>
-          <td class="primary">[#f03a47]</td>
-          <td class="secondary">[#F1A208]</td>
-          <td class="accent1">[#8338EC]</td>
+          <td class="primary">#f03a47</td>
+          <td class="secondary">#F1A208</td>
+          <td class="accent1">#8338EC</td>
           <td class="accent2"></td>
         </tr>
       </table>
+
+      <p class="logo"> jdfndsibgjsdgnojsdgno </p>
+
 
       <!-- ------------------------Steps 10-12------------------------------ -->
 
