--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>130
+<!DOCTYPE html>
 <!--Headsection-->
 <html lang="en">
   <head>
@@ -34,10 +34,12 @@
       <img src="Images/VIN.jpg" alt="MY Motor Cycle" />
       <!--TEXT ELIMENT-->
     </main>
+    
+    
 
     <p>My <em>Highschool</em> days.</p>
 
-    <h2>TEST PART ONE</h2>
+    <h2>TEST PART ONE </h2>
     <p></p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur,
