--- a/WDD130/wwr/Index.html
+++ b/WDD130/wwr/Index.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">Page 2</a>
+          <a href="Subpage.html">Page 2</a>
           <a href="site-plan-rafting.html">Site Plan</a>
           <a href="contactus.html">Contact Us</a>
         </nav>
@@ -35,7 +35,7 @@
             <a class="book" href="rates.html">Book Now</a>
           </div>
         </section>
-      </div>    
+      </div>
       <main class="home-grid">
         <section class="rivers-card">
           <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
@@ -72,6 +72,8 @@
           </p>
           <a class="join" href="rivers.html">Join Us</a>
         </section>
+        
+
       </main>
       <footer>
         <h3>Dry Oar &copy; 2022 - VIN</h3>
